5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4491/executions/1791_1594.log
== TEST (2019-05-29 14:08:35) 
-- CODE:
from numpy import *
vet = array(eval(input("vetores: ")))
i = 0
p = 0
s = 0

while(i>0):
	i[0] =  i[0] * p
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:09:06) 
-- CODE:
from numpy import *
vet = array(eval(input("vetores: ")))
i = 0
p = 0
s = 0

while(i>0):
	i[0] =  i[0] * p
print(i)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:09:32) 
-- CODE:
from numpy import *
vet = array(eval(input("vetores: ")))
i = 0
p = 0
s = 0

while(i>0):
	vet[i] =  vet[i] * p
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:09:42) 
-- CODE:
from numpy import *
vet = array(eval(input("vetores: ")))
i = 0
p = 0
s = 0

while(i>0):
	vet[i] =  vet[i] * p
print(i)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:10:29) 
-- CODE:
from numpy import *
vet = array(eval(input("vetores: ")))
i = 0
p = 0
s = 0

while(i>0):
	vet[i] =  vet[i] * p
	i = i + 1
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:10:36) 
-- CODE:
from numpy import *
vet = array(eval(input("vetores: ")))
i = 0
p = 0
s = 0

while(i>0):
	vet[i] =  vet[i] * p
	i = i + 1
print(i)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:11:15) 
-- CODE:
from numpy import *
vet = array(eval(input("vetores: ")))
i = 0
p = i[0] * p
s = 0

while(i>0):
	vet[i] =  vet[i] * p
	i = i + 1
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:11:25) 
-- CODE:
from numpy import *
vet = array(eval(input("vetores: ")))
i = 0
p = i[0] * p
s = 0

while(i>0):
	vet[i] =  vet[i] * p
	i = i + 1
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:12:03) 
-- CODE:
from numpy import *
vet = array(eval(input("vetores: ")))
i = 0
p1 = i[0] * p
s = 0

while(i>0):
	vet[i] =  vet[i] * p1
	i = i + 1
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:12:11) 
-- CODE:
from numpy import *
vet = array(eval(input("vetores: ")))
i = 0
p1 = i[0] 
s = 0

while(i>0):
	vet[i] =  vet[i] * p1
	i = i + 1
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:13:09) 
-- CODE:
from numpy import *
vet = array(eval(input("vetores: ")))
i = 0
p = i[0] * 1
s = 0

while(i>0):
	vet[i] =  vet[i] * p
	i = i + 1
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:13:23) 
-- CODE:
from numpy import *
vet = array(eval(input("vetores: ")))
i = 0
p = 0
s = 0

while(i>0):
	vet[i] =  vet[i] * 1
	i = i + 1
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:13:35) 
-- CODE:
from numpy import *
vet = array(eval(input("vetores: ")))
i = 0
p = 0
s = 0

while(i>0):
	vet[i] =  vet[i] * 1
	i = i + 1
	s = s + 1
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:13:42) 
-- CODE:
from numpy import *
vet = array(eval(input("vetores: ")))
i = 0
p = 0
s = 0

while(i>0):
	vet[i] =  vet[i] * 1
	i = i + 1
	s = s + 1
	
print(s)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:14:39) 
-- CODE:
from numpy import *
vet = array(eval(input("vetores: ")))
i = 0
p = 0
s = 0

while(i>0):
	vet[i] =  vet[i] * 1
	i = i + 1
	s = i * (p + 1)
	
print(s)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:14:48) 
-- CODE:
from numpy import *
vet = array(eval(input("vetores: ")))
i = 0
p = 0
s = 0

while(i>0):
	vet[i] =  vet[i] * 1
	i = i + 1
	s = i * (vet[i] + 1)
	
print(s)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:15:20) 
-- CODE:
from numpy import *
vet = array(eval(input("vetores: ")))
i = 0
p = 0
s = 0

while(i>0):
	vet[i] =  vet[i] * 1
	i = i + 1
	s = vet[i] * (vet[i] + 1)
	
print(s)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:16:51) 
-- CODE:
from numpy import *
vet = array(eval(input("vetores: ")))
i = 0
p = arange(n)
s = 0

while(i>0):
	vet[i] =  vet[i] * 1
	i = i + 1
	s = vet[i] * (vet[i] + 1)
	
print(s)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:17:01) 
-- CODE:
from numpy import *
vet = array(eval(input("vetores: ")))
i = 0
p = arange(3)
s = 0

while(i>0):
	vet[i] =  vet[i] * 1
	i = i + 1
	s = vet[i] * (vet[i] + 1)
	
print(s)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:17:10) 
-- CODE:
from numpy import *
vet = array(eval(input("vetores: ")))
i = 0
p = arange(3)
s = 0

while(i>0):
	vet[i] =  vet[i] * p
	i = i + 1
	s = vet[i] * (vet[i] + 1)
	
print(s)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:17:18) 
-- CODE:
from numpy import *
vet = array(eval(input("vetores: ")))
i = 0
p = arange(3)
s = 0

while(i>0):
	vet[i] =  vet[i] * p
	i = i + 1
	s = vet[i] * (vet[i] + 1)
	
print(i)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:17:32) 
-- CODE:
from numpy import *
vet = array(eval(input("vetores: ")))
i = 0
p = arange(3)
s = 0

while(i>0):
	vet[i] =  vet[i] * p
	i = i + 1
	s = vet[i] * (vet[i] + 1)
	s = s + 1
print(i)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:18:31) 
-- CODE:
from numpy import *
vet = array(eval(input("vetores: ")))
i = 0
p = ([i] + 1)* p
s = 0

while(i>0):
	vet[i] =  vet[i] * p
	i = i + 1
	s = vet[i] * (vet[i] + 1)
	s = s + 1
print(i)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:19:20) 
-- CODE:
from numpy import *
vet = array(eval(input("vetores: ")))
i = 0
p = int(0)
s = 0

while(i>0):
	vet[i] =  vet[i] * p
	i = i + 1
	s = vet[i] * (vet[i] + 1)
	s = s + 1
print(s)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:21:01) 
-- CODE:
from numpy import *
vet = array(eval(input("vetores:")))
i = 0
p = int(0)
s = 0

while(i>0):
	vet[i] =  vet[i] * p
	i = i + 1
	s = vet[i] * i + 1
	s = s + 1
print(s)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:21:47) 
-- CODE:
from numpy import *
vet = array(eval(input("vetores:")))
i = 0
p = int(0)
s = 0

while(i>0):
	vet[i] =  vet[i] * p
	s = vet[i] * i + 1
	s = s + 1
	
	i = i + 1
print(s)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:22:03) 
-- CODE:
from numpy import *
vet = array(eval(input("vetores:")))
i = 0
p = int(0)
s = 0

while(i>0):
	vet[i] =  vet[i] * p
	s = vet[i] * s + 1
	s = s + 1
	
	i = i + 1
print(s)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:23:57) 
-- CODE:
from numpy import *
vet = array(eval(input("vetores:")))
i = 0
p = int(0)
s = 0
while(i>0):
	vet[i] =  vet[i] * p
	s = vet[i] * s + 1
	s = s + 1
	i = s * p[i] + 1
	i = i + 1
print(s)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:24:04) 
-- CODE:
from numpy import *
vet = array(eval(input("vetores:")))
i = 0
p = int(0)
s = 0
while(i>0):
	vet[i] =  vet[i] * p
	s = vet[i] * s + 1
	s = s + 1
	s = s * p[i] + 1
	i = i + 1
print(s)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:24:21) 
-- CODE:
from numpy import *
vet = array(eval(input("vetores:")))
i = 0
p = int(0)
s = 0
while(i>0):
	vet[i] =  vet[i] * p
	s = s + 1
	s = s * p[i] + 1
	i = i + 1
print(s)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:24:29) 
-- CODE:
from numpy import *
vet = array(eval(input("vetores:")))
i = 0
p = int(0)
s = 0
while(i>0):
	vet[i] =  vet[i] * p
	s = s + 1
	s = s * p[i] + 1
	i = i + 1
print(vet)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:24:40) 
-- CODE:
from numpy import *
vet = array(eval(input("vetores:")))
i = 0
p = int(0)
s = 0
while(i>0):
	vet[i] =  vet[i] * p
	s = s + 1
	s = s * p[i] + 1
	i = i + 1
print(i)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:24:52) 
-- CODE:
from numpy import *
vet = array(eval(input("vetores:")))
i = 0
p = int(0)
s = 0
while(i>=0):
	vet[i] =  vet[i] * p
	s = s + 1
	s = s * p[i] + 1
	i = i + 1
print(i)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:25:06) 
-- CODE:
from numpy import *
vet = array(eval(input("vetores:")))
i = 0
p = int(0)
s = 0
while(i>=0):
	vet[i] =  vet[i] * p
	s = s + 1
	i = i + 1
print(i)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:25:28) 
-- CODE:
from numpy import *
vet = array(eval(input("vetores:")))
i = 0
p = 0
s = 0
while(i>=0):
	vet[i] =  vet[i] * p
	s = s + 1
	i = i + 1
print(i)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:26:10) 
-- CODE:
from numpy import *
vet = array(eval(input("vetores:")))
i = 0
p = int(0)
s = 0
while(i>=0):
	s = s + 1
	i = i + 1
print(i)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:27:24) 
-- CODE:
from numpy import *
vet = array(eval(input("vetores:")))
i = 0
p = int(0)
s = 0
while(i>=0):
	s = vet[i] * (p[i] + 1)
	s = s + 1
	i = i + 1
print(i)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:27:58) 
-- CODE:
from numpy import *
vet = array(eval(input("vetores:")))
i = 0
int(p) = 0
s = 0
while(i>=0):
	s = vet[i] * p[i] + 1
	s = s + 1
	i = i + 1
print(i)
-- ERROR:
File "XXXX", line 4
    int(p) = 0
    ^
SyntaxError: can't assign to function call
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:28:13) 
-- CODE:
from numpy import *
vet = array(eval(input("vetores:")))
i = 0
p = int
s = 0
while(i>=0):
	s = vet[i] * p[i] + 1
	s = s + 1
	i = i + 1
print(i)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:28:37) 
-- CODE:
from numpy import *
vet = array(eval(input("vetores:")))
i = 0
p = int
s = 0
while(i>=0):
	s = vet * p + 1
	s = s + 1
	i = i + 1
print(i)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:29:17) 
-- CODE:
from numpy import *
vet = array(eval(input("vetores:")))
i = 0
p = int(input("0"))
s = 0
while(i>=0):
	s = vet * p + 1
	s = s + 1
	i = i + 1
print(i)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:29:30) 
-- CODE:
from numpy import *
vet = array(eval(input("vetores:")))
i = 0
p = int(0)
s = 0
while(i>=0):
	s = vet * p + 1
	s = s + 1
	i = i + 1
print(i)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:29:41) 
-- CODE:
from numpy import *
vet = array(eval(input("vetores:")))
i = 0
p = int(0)
s = 0
while(i>=0):
	s = vet * p + 1
	s = s + 1
	i = i + 1
print(s)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:29:50) 
-- CODE:
from numpy import *
vet = array(eval(input("vetores:")))
i = 0
p = int(0)
s = 0
while(i>=0):
	s = vet * p + 1
	s = s + 1
	i = i + 1
	print(s)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 15:03:12) 
-- CODE:
from numpy import *
vet = array(eval(input("vetores:")))
i = 0
p = int(0)
s = 0
while(i>=0):
	s = vet * p + 1
	s = s + 1
	i = i + 1
	print(s)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
